--- a/resources/style.css
+++ b/resources/style.css
@@ -60,3 +60,11 @@ p {
 }
 .text-container {
 }
+
+@media only screen and (max-width: 640px){
+    .card-container{
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: 1rem;
+    }
+}
